fixed part of the spacing issue

--- a/Milestone1/course-outline/src/App.css
+++ b/Milestone1/course-outline/src/App.css
@@ -15,12 +15,12 @@
 
 .App-header {
   background-color: #e9ecf0;
-  min-height: 100vh;
-  display: flex;
+  /* min-height: 100vh; */
+  /* display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: center; */
+  font-size: calc(8px + 2vmin);
   color: rgb(2, 2, 2);
 }
 
